Add initial support for macos launcher